# FairPlay-Website

./: .env.dummy  .gitignore  LICENSE  README.md  envoi mail.py  index.html  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
.github/workflows/: build-tauri-linux.yml
public/: cgu.html  contributors.css  contributors.html  contributors.js  home.html  index.html  roadmap.html  robots.txt  script.js  sitemap.xml  style.css
public/images/: feature-not-available.psd
src/: types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: HomePage.module.css  globals.css  layout.tsx  page.tsx
src/components/: CategoryFilter.tsx  Layout.module.css  Layout.tsx  Sidebar.tsx  Topbar.tsx  UploadModal.tsx  UserMenu.tsx  VideoCard.tsx  VideoGridSection.tsx  icons.tsx  infoBanner.tsx  layoutStyle.css  notImplementedSection.module.css  notImplementedSection.tsx
src/lib/: fontawesome.ts  recommend.ts  supabase.ts  utils.ts
src/pages/: HomePage.module.css  Videos.module.css  _app.tsx  _document.tsx  adminpanel.module.css  adminpanel.tsx  cgu.tsx  complete-profile.module.css  complete-profile.tsx  feed.module.css  feed.tsx  gaming.tsx  history.tsx  index.tsx  learning.tsx  login.module.css  login.tsx  moderation-panel.module.css  moderation-panel.tsx  mychannel.module.css  mychannel.tsx  offline.module.css  offline.tsx  profile.tsx  register.tsx  resetpassword.tsx  subscriptions.tsx  trending.tsx  upload.tsx  videos.tsx
src/styles/: globals.css
src/types/: supabase.ts
src/utils/: videoHelpers.tsx
(+21 files in other folders)
