[package]
name = "fairplay-app"
version = "0.1.0"
description = "The fairplay tauri app"
authors = []
license = "MIT"
repository = "https://github.com/FairPlayTeam/FairPlay-Website"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fairplay_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.28"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2.7.0"
